# stashpad

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  TESTING.md  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
.agent/rules/: agpl-compliance.md  code-style-guide.md  devops-pipeline.md  devops-security.md  project.md  readme.md  typescript-tests.md
.agent/workflows/: create-new-release.md  generate-tauri-icons.md
.claude/: settings.local.json
.github/workflows/: release.yml  test.yml
assets/stashpad/: README.md
assets/stashpad/tauri/icons/: icon.icns
docs/: VERSION_MANAGEMENT.md
scripts/: sync-version.mjs
src/: App.svelte  app.css  counter.js  counter.ts  main.js  main.ts  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  main.rs
src/lib/: types.js  types.ts
src/lib/actions/: externalLinks.ts  portal.ts  tooltip.ts  trapFocus.ts
src/lib/components/: ActionButton.svelte  CloudAuthModal.svelte  ColorBadge.svelte  ConfirmationDialog.svelte  ContextManager.svelte  ContextManagerItem.svelte  ContextSwitcher.svelte  Editor.svelte  ExportDialog.svelte  FilePreviewModal.svelte  FilePreviewTooltip.svelte  Fireworks.svelte  Header.svelte  ImportDialog.svelte  Queue.svelte  Settings.svelte  SettingsButton.svelte  ShortcutInput.svelte  StashCard.svelte  TagBadge.svelte  Tooltip.svelte
src/lib/constants/: ai-prompts.ts
src/lib/i18n/: index.js  index.ts
src/lib/i18n/locales/: de.json  en.json
src/lib/services/: ai-service.svelte.ts  ai-service.ts  cloud-sync.ts  desktop-adapter.js  desktop-adapter.ts
src/lib/services/__tests__/: desktop-adapter.test.ts
src/lib/stores/: drag-state.svelte.ts  drag-state.ts
src/lib/styles/: tooltip.css
src/lib/utils/: ai-presets.ts  caret.ts  date.ts  files.ts  format.ts  language-detection.ts  markdown.ts  version.ts
src/lib/utils/__tests__/: admin.test.ts  date.test.ts  (+3 more)
(+1 files in other folders)
