[package]
name = "stashpad"
version = "1.2.3"
description = "The staging area for your AI context."
authors = ["Nico Wiedemann <nico.wiedemann@gmail.com>"]
repository = "https://github.com/EarMaster/stashpad"
license = "AGPL-3.0-only"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.4", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
active-win-pos-rs = "0.8"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
dirs = "6.0.0"
arboard = "3.6.1"
drag = { git = "https://github.com/crabnebula-dev/drag-rs" }
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-devtools = "2.0.0"
tauri-plugin-dialog = "2"
window-vibrancy = "0.5"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-fs = "2.4.4"
tauri-plugin-shell = "2.3.3"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
mime_guess = "2.0.5"
tauri-plugin-autostart = "2.5.1"
keyring = "3"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
tiny_http = "0.12"
url = "2"
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
reqwest = { version = "0.12", features = ["json"] }
regex = "1.12.3"
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
futures-util = "0.3"
urlencoding = "2.1.3"
tokio = { version = "1.50.0", features = ["time"] }

# Apple Intelligence (Foundation Models) - macOS 26+ only
[target.'cfg(target_os = "macos")'.dependencies]
fm-rs = { version = "0.1", optional = true }

[features]
macos-apple-intelligence = ["fm-rs"]

[dev-dependencies]
tempfile = "3"
